# listen

./: .env  .gitignore  Cargo.toml  README.md  cargo-leptos.nix  diesel.toml  docker-compose.yml  flake.nix  image.nix  leptosfmt.toml  module.nix  rust-toolchain.toml  seed.sh  tailwind.config.js  watch.sh
.github/: dependabot.yml
.github/workflows/: lockfile-update.yml  rust.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: api.rs  lib.rs  state.rs  videos.rs
crates/backend/: .gitignore  Cargo.toml  clean_certificates.sh  generate_certificate.sh
crates/backend/dev-certificates/: dev.listen.pwnies.dk-ca.crt  dev.listen.pwnies.dk.crt  dev.listen.pwnies.dk.key
crates/backend/src/: app_env_vars.rs  auth.rs  csrf_protection.rs  db.rs  error.rs  fileserv.rs  main.rs  oidc.rs  server_state.rs  ws.rs
crates/backend/src/handlers/: auth.rs  download.rs  mod.rs  user.rs  videos.rs
crates/backend/src/handlers/crowd/: mod.rs  participant.rs  player.rs
crates/backend/src/types/: mod.rs
crates/database/: .env  Cargo.toml  authorize-pending.sh  diesel.toml  psql.sh  seed.sh  seeds.sql
crates/database/migrations/2024-08-08-185227_init/: down.sql  up.sql
crates/database/migrations/2024-08-25-184734_downloads/: down.sql  up.sql
crates/database/migrations/2024-11-14-183424_auth/: down.sql  up.sql
crates/database/src/: auth.rs  lib.rs  schema.rs
crates/database/src/models/: downloads.rs  mod.rs  oidc_mapping.rs  user.rs  user_session.rs  videos.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/frontend/style/: main.scss
crates/server/: Cargo.toml
crates/server/src/: db.rs  error.rs  fileserv.rs  main.rs  ws.rs
crates/server/src/handlers/: download.rs  videos.rs
crates/typed-uuid/: Cargo.toml
crates/typed-uuid/src/: diesel_impls.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  backend.rs  client_state.rs  downloads.rs  errors.rs  lib.rs  loading.rs  nav.rs  routes.rs  server_state.rs  settings.rs  state.rs  util.rs  videos.rs
crates/ui/src/components/: embed_youtube.rs  mod.rs  nav_bar.rs
crates/ui/src/components/video_player/: clock.rs  controls.rs  mod.rs  timeline.rs
crates/ui/src/contexts/: backend.rs  global_redirect.rs  mod.rs  video_player.rs  video_store.rs
crates/ui/src/hooks/: auth.rs
crates/ui/src/layouts/: auth.rs  mod.rs  page.rs
crates/ui/src/pages/: downloads.rs  mod.rs  settings.rs  videos.rs
crates/ui/src/pages/auth/: login.rs  login_callback.rs  logout.rs  mod.rs  pending.rs
crates/ui/src/pages/crowd/: list.rs  mod.rs  participant.rs  player.rs
keys/: generate_certificate.sh
migrations/2024-08-08-185227_init/: up.sql
migrations/2024-11-14-183424_auth/: down.sql  up.sql
nix/: cargo-leptos.nix  diesel-cli.nix  leptosfmt.nix
