[workspace]
resolver = "2"

package.edition = "2021"
package.license = "MIT/Apache-2.0"
package.version = "0.1.0"

members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-test = "15.7.1"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
deadpool = "0.12.1"
diesel = "2.2.4"
diesel-async = "0.5.0"
diesel_async_migrations = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
headers = "0.4.0"
http = "1"
leptos = "0.6"
leptos_axum = "0.6"
leptos_icons = "0.3"
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4.22"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0"
serde_json = "1.0"
strum = "0.26.3"
thiserror = "1"
time = "0.3.36"
tokio = "1.39.3"
tokio-tungstenite = "0.23.1"
tokio-util = "0.7.12"
tower = "0.5"
tower-http = "0.5.2"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = "0.3"
wasm-bindgen = "=0.2.93"
web-sys = "0.3"
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
    "tokio",
] }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[[workspace.metadata.leptos]]
bin-package = "backend"
lib-package = "frontend"
name = "listen"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
style-file = "style.css"

tailwind-config-file = "tailwind.config.js"
tailwind-input-file = "tailwind.css"

assets-dir = "public"
reload-port = 3001
site-addr = "0.0.0.0:3000"

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
