[workspace]
resolver = "2"

package.edition = "2021"
package.license = "MIT/Apache-2.0"
package.version = "0.1.0"

members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
axum-extra = "0.9.4"
axum-server = "0.7.1"
axum-test = "15.7.4"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
deadpool = "0.12.1"
diesel = { version = "2.2.4", features = [
    "postgres",
    "time",
    "serde_json",
    "uuid",
    "chrono",
] }
diesel-async = "0.5.0"
diesel-derive-enum = "2.1.0"
diesel_async_migrations = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
headers = "0.4.0"
http = "1"
hyper = "1.5.1"
icondata = { version = "0.5.0", default-features = false, features = [
    "ant-design-icons",
    "bootstrap-icons",
    "box-icons",
    "github-octicons",
    "tabler-icons",
    "lucide",
    "feather",
    "material-design-icons",
] }
jsonwebtoken = "9.3.0"
leptos = { version = "0.7.0", features = ["nightly"] }
leptos-use = "0.14.0-rc3"
leptos_axum = "0.7.0"
leptos_icons = { git = "https://github.com/PenguinWithATie/leptos-icons", branch = "main" }
leptos_meta = "0.7.0"
leptos_router = "0.7.0"
log = "0.4.22"
openidconnect = "3.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
] }
rustls = "0.23.19"
serde = "1.0"
serde_json = "1.0"
structural-convert = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
time = "0.3.36"
tokio = "1.41.0"
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.12"
tower = "0.5"
tower-http = "0.5.2"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = "0.3"
uuid = { version = "1.11.0", features = ["serde"] }
wasm-bindgen = "=0.2.95"
web-sys = "0.3"
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
    "tokio",
] }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[[workspace.metadata.leptos]]
bin-package = "backend"
lib-package = "frontend"
name = "listen"

bin-features = ["local-https"]

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
style-file = "style.css"

tailwind-config-file = "tailwind.config.js"
tailwind-input-file = "tailwind.css"

assets-dir = "public"
reload-port = 3001
site-addr = "0.0.0.0:3000"

# Get HTTPS to work
# Run this command:
#  socat openssl-listen:3002,fork,reuseaddr,cert=./crates/backend/dev-certificates/dev.listen.pwnies.dk.crt,key=./crates/backend/dev-certificates/dev.listen.pwnies.dk.key,verify=0 tcp-connect:localhost:3001
reload-external-port = 3002
reload-ws-protocol = "wss"

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
