[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT/Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-server = "0.7.2"
axum-test = "17.2.0"
cfg-if = "1.0.0"
codee = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
deadpool = "0.12.2"
diesel = { version = "2.2.8", features = [
    "postgres",
    "time",
    "serde_json",
    "uuid",
    "chrono",
] }
diesel-async = "0.5.2"
diesel-derive-enum = "2.1.0"
diesel_async_migrations = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
headers = "0.4.0"
http = "1"
hyper = "1.6.0"
icondata = { version = "0.5.0", default-features = false, features = [
    "ant-design-icons",
    "bootstrap-icons",
    "box-icons",
    "github-octicons",
    "tabler-icons",
    "lucide",
    "feather",
    "material-design-icons",
] }
jsonwebtoken = "9.3.1"
leptos = { version = "0.7.7", features = ["nightly"] }
leptos-use = "0.15.6"
leptos_axum = "0.7.7"
leptos_icons = { git = "https://github.com/ozpv/leptos-icons", branch = "leptos-0.7.0" }
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
log = "0.4.26"
openidconnect = "4.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.14", default-features = false, features = [
    "rustls-tls",
] }
rustls = "0.23.23"
serde = "1.0"
serde_json = "1.0"
structural-convert = "0.13.0"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.19.0"
thiserror = "2.0.12"
time = "0.3.39"
tokio = "1.44.1"
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.14"
tower = "0.5"
tower-http = "0.6.2"
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["serde"] }
wasm-bindgen = "=0.2.100"
web-sys = "0.3"
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
    "tokio",
] }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[[workspace.metadata.leptos]]
bin-package = "backend"
lib-package = "frontend"
name = "listen"

bin-features = ["local-https"]

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
style-file = "style.css"

tailwind-config-file = "tailwind.config.js"
tailwind-input-file = "tailwind.css"

assets-dir = "public"
reload-port = 3001
site-addr = "0.0.0.0:3000"

# Get HTTPS to work
# Run this command:
#  socat openssl-listen:3002,fork,reuseaddr,cert=./crates/backend/dev-certificates/dev.listen.pwnies.dk.crt,key=./crates/backend/dev-certificates/dev.listen.pwnies.dk.key,verify=0 tcp-connect:localhost:3001
reload-external-port = 3002
reload-ws-protocol = "wss"

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
