[package]
edition.workspace = true
license.workspace = true
name = "api"
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
time = { workspace = true, features = ["serde"] }
typed-uuid.path = "../typed-uuid"
