[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
cfg-if.workspace = true
diesel-async = { workspace = true, features = [
    "postgres",
    "deadpool",
], optional = true }
diesel = { workspace = true, features = ["postgres", "time"], optional = true }
gloo-net = { workspace = true, features = ["http"] }
http.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos.workspace = true
log = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json"] }
thiserror.workspace = true
web-sys = { workspace = true, features = ["AbortController", "AbortSignal"] }
serde = { workspace = true, features = ["derive"] }

database = { path = "../database" }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:diesel",
    "dep:diesel-async",
    "dep:leptos_axum",
    "database/diesel",
]
