[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true, optional = true }
cfg-if.workspace = true
diesel-async = { workspace = true, features = [
    "postgres",
    "deadpool",
], optional = true }
diesel = { workspace = true, features = ["postgres", "time"], optional = true }
gloo-net = { workspace = true, features = ["http"] }
http.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos.workspace = true
log.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
web-sys = { workspace = true, features = ["AbortController", "AbortSignal"] }

database = { path = "../database" }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:diesel",
    "dep:diesel-async",
    "dep:leptos_axum",
    "database/diesel",
]
