[package]
edition.workspace = true
license.workspace = true
name = "backend"
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-test.workspace = true
deadpool = { workspace = true, features = ["rt_tokio_1"] }
diesel = { workspace = true, features = ["postgres", "time"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
dotenvy.workspace = true
futures-util = { workspace = true, features = ["sink", "std"] }
futures.workspace = true
headers.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["strum_macros", "derive"] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace", "timeout"] }
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
youtube_dl.workspace = true

database = { path = "../database", features = ["diesel"] }
tempfile = "3.13.0"
ui = { path = "../ui", default-features = false, features = ["ssr"] }
