[package]
edition.workspace = true
license.workspace = true
name = "database"
version.workspace = true

[dependencies]
anyhow.workspace = true
diesel.workspace = true
diesel-async = { workspace = true, features = ["postgres"] }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
diesel_async_migrations.workspace = true
openidconnect.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["serde"] }
typed-uuid = { path = "../typed-uuid", features = ["diesel"] }
