[package]
edition.workspace = true
license.workspace = true
name = "frontend"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ui = { path = "../ui", default-features = false, features = ["hydrate"] }

console_error_panic_hook.workspace = true
console_log.workspace = true
leptos = { workspace = true, features = ["hydrate"] }
log.workspace = true
wasm-bindgen.workspace = true
