[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-test = { workspace = true }
dotenvy = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
diesel = { workspace = true, features = ["postgres", "time"] }
deadpool = { workspace = true, features = ["rt_tokio_1"] }
futures = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
headers = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["strum_macros", "derive"] }
time = { workspace = true, features = ["serde"] }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs", "trace", "timeout"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

app = { path = "../app", default-features = false, features = ["ssr"] }
database = { path = "../database", features = ["diesel"] }
