[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-test.workspace = true
axum = { workspace = true, features = ["macros", "ws"] }
deadpool = { workspace = true, features = ["rt_tokio_1"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
diesel = { workspace = true, features = ["postgres", "time"] }
dotenvy.workspace = true
futures-util = { workspace = true, features = ["sink", "std"] }
futures.workspace = true
headers.workspace = true
leptos_axum.workspace = true
leptos = { workspace = true, features = ["ssr"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["strum_macros", "derive"] }
time = { workspace = true, features = ["serde"] }
tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs", "trace", "timeout"] }
tower = { workspace = true, features = ["util"] }
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

app = { path = "../app", default-features = false, features = ["ssr"] }
database = { path = "../database", features = ["diesel"] }
