[package]
edition.workspace = true
license.workspace = true
name = "ui"
version.workspace = true

[dependencies]
api = { path = "../api" }

cfg-if.workspace = true
codee.workspace = true
gloo-net = { workspace = true, features = ["http", "json"] }
gloo-storage.workspace = true
http.workspace = true
icondata.workspace = true
jsonwebtoken.workspace = true
leptos-use.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
web-sys = { workspace = true, features = ["AbortController", "AbortSignal"] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos-use/ssr", "dep:leptos_axum"]
